Converter by Valselt v11

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,16 +3,22 @@ server {
     index index.php index.html;
     server_name localhost;
     root /var/www/html;
-    client_max_body_size 64M; # Agar bisa upload file agak besar
+    client_max_body_size 64M;
 
+    location ~ "^/([a-zA-Z0-9]{16})$" {
+        try_files $uri /download.php?token=$1;
+    }
+
+    # Aturan Default
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
+    # Handle PHP
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php-converter:9000; # Mengarah ke container PHP
+        fastcgi_pass php-converter:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
